--- a/package.json
+++ b/package.json
@@ -9,20 +9,21 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "@types/draft-js": "^0.10.40",
     "@types/firebase": "^3.2.1",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.5",
+    "@types/slate-react": "^0.22.9",
     "@types/uuid": "^7.0.3",
-    "draft-js": "^0.11.5",
     "firebase": "^7.14.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "slate": "^0.58.1",
+    "slate-react": "^0.58.1",
     "typescript": "^3.8.3",
     "uuid": "^8.0.0"
   },
